Backend | Add Auth system (login, logout, admin, ...)
